[gd_scene load_steps=18 format=3 uid="uid://c46pvmkujapqt"]

[ext_resource type="PackedScene" uid="uid://bnh3kpg5lhlny" path="res://MessageBox.tscn" id="1_6jg07"]
[ext_resource type="Script" path="res://UI.gd" id="1_rilyt"]
[ext_resource type="FontFile" uid="uid://climooyaqxkxv" path="res://AtlantisInternational-jen0.ttf" id="2_lah2c"]
[ext_resource type="Script" path="res://Notif.gd" id="3_vgjtm"]
[ext_resource type="AudioStream" uid="uid://wtottilo3cxg" path="res://notif.mp3" id="5_o17gr"]
[ext_resource type="Texture2D" uid="uid://co6ou5r6vocna" path="res://school/portraits/teacher.png" id="6_xfgv6"]
[ext_resource type="Texture2D" uid="uid://bupq5ck4tg2la" path="res://school/classroom_bg.jpg" id="7_7ynyr"]
[ext_resource type="Texture2D" uid="uid://dhvq8mh0t07h" path="res://school/loveLetterBackground.png" id="8_3b80l"]
[ext_resource type="Texture2D" uid="uid://bj7k4bwclnnu1" path="res://school/coin.png" id="9_018il"]
[ext_resource type="PackedScene" uid="uid://6lh05vm6wb2i" path="res://DropBox.tscn" id="10_k7qkb"]

[sub_resource type="Animation" id="Animation_38kyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wyqor"]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tgjkm"]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hgfj"]
_data = {
"RESET": SubResource("Animation_38kyq"),
"fade_in": SubResource("Animation_wyqor"),
"fade_out": SubResource("Animation_tgjkm")
}

[sub_resource type="Animation" id="Animation_ppwwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_icu63"]
resource_name = "blink"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tt2pm"]
_data = {
"RESET": SubResource("Animation_ppwwl"),
"blink": SubResource("Animation_icu63")
}

[node name="UI" type="CanvasLayer"]
layer = 3
script = ExtResource("1_rilyt")

[node name="Screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Screen"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_7ynyr")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="Screen"]
layer = 5

[node name="MessageBox" parent="Screen/CanvasLayer" instance=ExtResource("1_6jg07")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -119.5
offset_top = -67.0
offset_right = 119.5
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0

[node name="LeftSpeaker" type="TextureRect" parent="Screen"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -191.0
offset_right = 186.0
grow_vertical = 0
texture = ExtResource("6_xfgv6")
expand_mode = 1
stretch_mode = 6

[node name="RightSpeaker" type="TextureRect" parent="Screen"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -191.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_xfgv6")
expand_mode = 1
stretch_mode = 6
flip_h = true

[node name="Transition" type="ColorRect" parent="Screen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Screen/Transition"]
libraries = {
"": SubResource("AnimationLibrary_4hgfj")
}

[node name="Notif" type="RichTextLabel" parent="Screen"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -19.0
offset_right = 125.0
grow_vertical = 0
theme_override_colors/default_color = Color(1, 0.164706, 0.180392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/normal_font = ExtResource("2_lah2c")
text = " ! Check Your Phone !"
scroll_active = false
script = ExtResource("3_vgjtm")

[node name="Timer" type="Timer" parent="Screen/Notif"]
wait_time = 4.5
one_shot = true

[node name="SFX" type="AudioStreamPlayer" parent="Screen/Notif"]
stream = ExtResource("5_o17gr")
volume_db = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Screen/Notif"]
libraries = {
"": SubResource("AnimationLibrary_tt2pm")
}

[node name="LoveNote" type="TextureRect" parent="Screen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -126.5
offset_right = 105.0
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_3b80l")
expand_mode = 1

[node name="Text" type="RichTextLabel" parent="Screen/LoveNote"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -47.5
offset_right = 77.0
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
text = "Roses are red. violets are blue. I want to have se"
scroll_active = false

[node name="Money" type="TextureRect" parent="Screen"]
layout_mode = 0
offset_left = 427.0
offset_top = 254.0
offset_right = 439.0
offset_bottom = 267.0
texture = ExtResource("9_018il")
expand_mode = 1

[node name="Number" type="RichTextLabel" parent="Screen/Money"]
layout_mode = 0
offset_left = 15.0
offset_top = -4.0
offset_right = 91.0
offset_bottom = 14.0
theme_override_fonts/normal_font = ExtResource("2_lah2c")
text = "1"

[node name="DropBox" parent="Screen" instance=ExtResource("10_k7qkb")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
