extends CanvasLayer

@onready var notif = $Screen/Notif
@onready var message_box = $Screen/MessageBox
@onready var transition = $Screen/Transition
@onready var left_speaker = $Screen/LeftSpeaker
@onready var right_speaker = $Screen/RightSpeaker
@onready var background = $Screen/Background
@onready var love_note = $Screen/LoveNote
@onready var money = $Screen/Money
@onready var money_amount = $Screen/Money/Number
@onready var drop_box = $Screen/DropBox
